--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - POW_TIME=2
       - POW_KB=512
       - POW_DIFFICULTY=25
+      - TOR_CONTROL_PORT_PASSWORD=changeme
 
   nginx:
     ports:
