use lua-load-per-thread as per https://cbonte.github.io/haproxy-dconv/2.6/configuration.html\#3.1-lua-load because we don't have any cross request/thread global vars to worry about

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -2,7 +2,7 @@ global
 	daemon
 	maxconn 256
 	log stdout  format raw  local0  debug
-	lua-load /etc/haproxy/scripts/register.lua
+	lua-load-per-thread /etc/haproxy/scripts/register.lua
 	stats socket /var/run/haproxy.sock mode 666 level admin
 	stats socket 127.0.0.1:1999 level admin
 	httpclient.ssl.verify none
