--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - POW_COOKIE_SECRET=changeme
       - HMAC_COOKIE_SECRET=changeme
       - RAY_ID=docker
-      - BUCKET_DURATION=43200
+      - CHALLENGE_EXPIRY=43200
       - BACKEND_NAME=servers
       - SERVER_PREFIX=websrv
       - CHALLENGE_INCLUDES_IP=1
