--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,8 @@ services:
       dockerfile: haproxy/Dockerfile
     volumes:
       - ./haproxy/haproxy.cfg:/etc/haproxy/haproxy.cfg
-      - ./haproxy/map/ddos.map:/etc/haproxy/ddos.map
-      - ./haproxy/map/hosts.map:/etc/haproxy/hosts.map
-      - ./haproxy/map/backends.map:/etc/haproxy/backends.map
-      - ./haproxy/map/blocked.map:/etc/haproxy/blocked.map
-      - ./haproxy/map/whitelist.map:/etc/haproxy/whitelist.map
-      - ./haproxy/map/maintenance.map:/etc/haproxy/maintenance.map
-      - ./haproxy/template/maintenance.html:/etc/haproxy/maintenance.html
-      - ./haproxy/template/trace.txt:/etc/haproxy/trace.txt
+      - ./haproxy/map/:/etc/haproxy/map/
+      - ./haproxy/template/:/etc/haproxy/template/
       - ./src/lua/scripts/:/etc/haproxy/scripts/
       - ./src/lua/libs/:/etc/haproxy/libs/
       - ./src/js/:/etc/haproxy/js/
