Ability to choose between sha256 or argon2 with env var close #21

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - ARGON_TIME=2
       - ARGON_KB=512
       - POW_DIFFICULTY=24
+      - POW_TYPE=argon2
       - TOR_CONTROL_PORT_PASSWORD=changeme
 
   nginx:
