Add back dataplaneapi in anticipation of using it to control haproxy rather than haproxy-sdk runtime socket

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -18,17 +18,21 @@ defaults
 	timeout server 50000ms
 	timeout tarpit 5000ms
 
-#frontend stats-frontend
-#	bind *:2000
-#	option tcplog
-#	mode tcp
-#	acl white_list src xxx.xxx.xxx.xxx
-#	tcp-request connection reject unless white_list
-#	default_backend stats-backend
-
-#backend stats-backend
-#	mode tcp
-#	server stats-localhost 127.0.0.1:1999
+# program api
+	# command dataplaneapi -f /etc/haproxy/dataplaneapi.hcl --update-map-files
+	# no option start-on-reload
+# 
+# frontend stats-frontend
+	# bind *:2000
+	# option tcplog
+	# mode tcp
+	# acl white_list src 127.0.0.1
+	# tcp-request connection reject unless white_list
+	# default_backend stats-backend
+# 
+# backend stats-backend
+	# mode tcp
+	# server stats-localhost 127.0.0.1:1999
 
 frontend http-in
 
