Fully convert to data plane api Change global ACL to a map to realtime update with data plane api Change how on setartup servers are registered in lua

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     network_mode: host
     ports:
       - 80:80
-      # - 2000:2000 #runtime api
-      # - 2001:2001 #dataplaneapi
+      - 2001:2001 #dataplaneapi
     build:
       context: ./
       dockerfile: haproxy/Dockerfile
