--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -2,7 +2,8 @@ global
 	daemon
 	maxconn 256
 	log stdout  format raw  local0  debug
-	lua-load-per-thread /etc/haproxy/scripts/register.lua
+	lua-load /etc/haproxy/scripts/register-servers.lua
+	lua-load-per-thread /etc/haproxy/scripts/register-bot-check.lua
 	stats socket /var/run/haproxy.sock mode 666 level admin
 	stats socket 127.0.0.1:1999 level admin
 	httpclient.ssl.verify none
@@ -18,21 +19,21 @@ defaults
 	timeout server 50000ms
 	timeout tarpit 5000ms
 
-# program api
-	# command dataplaneapi -f /etc/haproxy/dataplaneapi.hcl --update-map-files
-	# no option start-on-reload
-# 
-# frontend stats-frontend
-	# bind *:2000
-	# option tcplog
-	# mode tcp
-	# acl white_list src 127.0.0.1
-	# tcp-request connection reject unless white_list
-	# default_backend stats-backend
-# 
-# backend stats-backend
-	# mode tcp
-	# server stats-localhost 127.0.0.1:1999
+program api
+	command dataplaneapi -f /etc/haproxy/dataplaneapi.hcl --update-map-files
+	no option start-on-reload
+
+frontend stats-frontend
+	bind 127.0.0.1:2000
+	option tcplog
+	mode tcp
+	acl white_list src 127.0.0.1
+	tcp-request connection reject unless white_list
+	default_backend stats-backend
+
+backend stats-backend
+	mode tcp
+	server stats-localhost 127.0.0.1:1999
 
 frontend http-in
 
@@ -64,7 +65,7 @@ frontend http-in
 	acl is_excluded path /favicon.ico #add more
 
 	# acl ORs for when ddos_mode_enabled
-	acl ddos_mode_enabled_override hdr_cnt(xr3la1rfFc) eq 0
+	acl ddos_mode_enabled_override str("true"),map(/etc/haproxy/map/ddos_global.map) -m found
 	acl ddos_mode_enabled hdr(host),lower,map(/etc/haproxy/map/ddos.map) -m bool
 	acl ddos_mode_enabled base,map(/etc/haproxy/map/ddos.map) -m bool
 
@@ -97,6 +98,12 @@ frontend http-in
 	http-response set-header X-Cache-Status HIT if !{ srv_id -m found }
 	http-response set-header X-Cache-Status MISS if { srv_id -m found }
 
+	# simple example cache for files
+	http-request set-var(txn.path) path
+	acl can_cache var(txn.path) -i -m end .png .jpg .jpeg .jpe .ico .webmanifest .xml .apng .bmp .webp .pjpeg .jfif .gif .mp4 .webm .mov .mkv .svg .m4a .aac .flac .mp3 .ogg .wav .opus .txt .pdf .sid
+	http-request cache-use basic_cache if can_cache
+	http-response cache-store basic_cache if can_cache
+
 	default_backend servers
 
 cache basic_cache
@@ -105,15 +112,6 @@ cache basic_cache
 	max-age 86400
 
 backend servers
-
-	# simple example cache for files
-	http-request set-var(txn.path) path
-	acl can_cache var(txn.path) -i -m end .png .jpg .jpeg .jpe .ico .webmanifest .xml .apng .bmp .webp .pjpeg .jfif .gif .mp4 .webm .mov .mkv .svg .m4a .aac .flac .mp3 .ogg .wav .opus .txt .pdf .sid
-	http-request cache-use basic_cache if can_cache
-	http-response cache-store basic_cache if can_cache
-
-	# placeholder servers, activated by LUA or the control panel
-    server-template websrv 1-100 0.0.0.0:80 check disabled
 	# use server based on hostname
 	use-server %[req.hdr(host),lower,map(/etc/haproxy/map/backends.map)] if TRUE
 
