--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -78,6 +78,9 @@ frontend http-in
 	acl maintenance_mode hdr(host),lower,map_str(/etc/haproxy/map/maintenance.map) -m found
 	http-request return lf-file /etc/haproxy/template/maintenance.html status 200 content-type "text/html; charset=utf-8" hdr "cache-control" "private, max-age=30" if maintenance_mode
 
+	# map if you want a domain to be a redirect from the edge (302 for now)
+	http-request redirect location https://%[hdr(host),map(/etc/haproxy/map/rewrite.map)]%[capture.req.uri] code 302 if { hdr(host),map(/etc/haproxy/map/rewrite.map) -i -m found }
+
 	# create acl for bools updated by lua
 	acl captcha_passed var(txn.captcha_passed) -m bool
 	acl pow_passed var(txn.pow_passed) -m bool
