Allow proper ssl verification for backends (With a privately managed CA of course)

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -115,6 +115,8 @@ cache basic_cache
 	max-age 86400
 
 backend servers
+	# optional (recommended) ssl, requires CA cert installed on proxy and signeed cert on backends, you can also use "ssl verify none" but ssl can then be trivially mitm'd
+	# default-server ssl verify required ca-file ca-certificates.crt sni req.hdr(Host)
 	# use server based on hostname
 	use-server %[req.hdr(host),lower,map(/etc/haproxy/map/backends.map)] if TRUE
 
